Added RB BG, speeds onclick

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     <!-- Add an icon library-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
+    <script   src="https://code.jquery.com/jquery-3.6.0.min.js"   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="   crossorigin="anonymous"></script>
+    
 </head>
 
 <body>
  
-    <div class="container">
+    <div class="container" id="bg-slide">
 
         <a href="day/index.html">
         <div id="dateBox" class="box">
@@ -84,5 +85,7 @@
     </div>
 </div>
 -->
+
+<script src="script.js"></script>
 </body>
 </html>
